# Ascend-MindIE-SD

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE.md  MANIFEST.in  README.en.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES.txt  pyproject.toml  requirements-lint.txt  requirements-test.txt  requirements.txt  setup.py  version.py
.agents/skills/mindie-sd-community-governance/: SKILL.md
.claude/: README.md
.devcontainer/: README.md
.devcontainer/cpu/: devcontainer.json
csrc/: CMakeLists.txt
csrc/ops/: CMakeLists.txt
csrc/ops/ada_block_sparse_attention/op_host/: CMakeLists.txt  ada_block_sparse_attention_def.cpp  ada_block_sparse_attention_proto.cpp  ada_block_sparse_attention_tiling.cpp  ada_block_sparse_attention_tiling.h  ada_block_sparse_attention_tiling_compile_info.h  ada_block_sparse_attention_tiling_v2.h  data_copy_transpose_tiling_def.h  ops_error.h
csrc/ops/ada_block_sparse_attention/op_kernel/: ada_block_sparse_attention.cpp  ada_block_sparse_attention_base.h  ada_block_sparse_attention_empty_tensor.h  kernel_data_copy_transpose.h
csrc/ops/ascendc/op_host/: ada_block_sparse_attention.cpp  ada_block_sparse_attention_proto.cpp  ada_block_sparse_attention_tiling.cpp  ada_block_sparse_attention_tiling.h  ada_block_sparse_attention_tiling_const.h  ada_block_sparse_attention_tiling_context.h  ada_block_sparse_attention_tiling_struct.h  ada_block_sparse_attention_tiling_v2.h
csrc/ops/ascendc/op_kernel/: ada_block_sparse_attention_empty_tensor.h  ada_block_sparse_attention_s1s2_bns1_x910.h  ada_block_sparse_attention_s1s2_bns1_x910_base.h
csrc/ops/block_sparse_attention/op_host/: CMakeLists.txt  block_sparse_attention_def.cpp  block_sparse_attention_proto.cpp  block_sparse_attention_tiling.cpp  block_sparse_attention_tiling.h  block_sparse_attention_tiling_compile_info.h  block_sparse_attention_tiling_const.h  block_sparse_attention_tiling_context.h  block_sparse_attention_tiling_struct.h  block_sparse_attention_tiling_v2.h  data_copy_transpose_tiling.h  error_manager.h
csrc/ops/block_sparse_attention/op_kernel/: block_sparse_attention.cpp  block_sparse_attention_base.h  block_sparse_attention_empty_tensor.h  block_sparse_attention_s1s2_bns1_x910.h  block_sparse_attention_s1s2_bns1_x910_base.h
csrc/ops/la_preprocess/op_host/: CMakeLists.txt  la_preprocess_def.cpp  la_preprocess_proto.cpp  la_preprocess_tiling.cpp  la_preprocess_tiling.h
csrc/ops/la_preprocess/op_kernel/: la_preprocess.cpp  la_preprocess.h
csrc/ops/laser_attention/op_host/: CMakeLists.txt  laser_attention_def.cpp  laser_attention_proto.cpp  laser_attention_tiling.cpp  laser_attention_tiling.h
csrc/ops/laser_attention/op_kernel/: AddressMappingForwardOnline.h  AddressMappingVectorForwardOnline.h  CubeForward.h  VectorForward.h  address_const.h  laser_attention.cpp  matmul_const.h
csrc/ops/sparse_block_estimate/op_host/: CMakeLists.txt  sparse_block_estimate_def.cpp  sparse_block_estimate_proto.cpp  sparse_block_estimate_tiling.cpp  sparse_block_estimate_tiling.h
csrc/ops/sparse_block_estimate/op_kernel/: sparse_block_estimate.cpp  sparse_block_estimate.h
csrc/ops/utils/inc/: fallback.h
csrc/ops/utils/inc/error/: ops_error.h
csrc/ops/utils/inc/kernel/: comm_args.h  pse.h  sync_collectives.h  util.h
csrc/ops/utils/inc/log/inner/: dfx_base.h
csrc/ops/utils/inc/tiling/: data_copy_transpose_tiling.h  data_copy_transpose_tiling_def.h  tiling_base.h  tiling_type.h
csrc/ops/utils/src/: fallback_comm.cpp
csrc/plugin/: ada_block_sparse_attention.cpp  ada_block_sparse_attention.h  adalayernorm.cpp  adalayernorm.h  block_sparse_attention.cpp  la.cpp  la_preprocess.cpp  register_ops.cpp  sparse_block_estimate.cpp
docker/: Dockerfile_910b_aarch64.ubuntu  README.md
docs/: conf.py  index.md  requirements-docs.txt
docs/en/: menu_user_manual.md
docs/en/developer_guide/: build_guide.md  test.md  tooling.md
docs/zh/: architecture.md  developer_guide.md  environment_variable_configuration.md  installing_guide.md  menu_user_manual.md  quick_start.md
docs/zh/appendix/: environment_variable.md  file_directory_permissions_description.md
docs/zh/developer_guide/: build_guide.md  test.md  tooling.md
docs/zh/features/: DyEPLB.md  cache.md  compilation.md  graphics_memory_optimization.md  others.md  parallelism.md  sparse_quantization.md  supported_matrix.md
examples/cache/: README.md
examples/service/: request.py  service.md  worker.py
examples/wan/: parameter_config.md
extensions/: README.md
mindiesd/: __init__.py
mindiesd/eplb/: __init__.py  collector.py  dispatcher.py  eplb_scheduler.py  greedy_algorithm.py  task_handler.py  task_manager.py  task_payload.py  task_transfer.py
mindiesd/layers/: _custom_ops.py  adalayernorm.py  register_ops.py  rope.py
mindiesd/layers/flash_attn/: ascend_laser_attention.py  attention_forward.py  attention_func.py  attention_operate.py  fused_attn_score.py  prompt_flash_attn.py  sparse_flash_attn.py  (+2 more)
mindiesd/quantization/: layer.py  mode.py  quantize.py
mindiesd/utils/: get_platform.py
tests/: README.md  incremental_test_finder.py  run.py  run_UT_test.sh  run_incremental.py  run_incremental_test.sh  run_test.sh  test_file_utils.py  test_offload.py  test_share_memory.py  test_version_metadata.py
tests/UT/: run.py
tests/cache/: test_attention_cache.py  test_cache_agent.py  test_dit_block_cache.py
tests/compilation/: test_backend.py
tests/eplb/: test_eplb_scheduler.py
tests/layers/: test_activation.py  test_adalayernorm.py  test_custom_ops.py  test_embedding.py  test_layernorm.py  test_norm.py  test_register_ops.py  test_rmsnorm.py  test_rope.py
tests/plugin/: la_acc_prof.py  test_adablocksparseattention.py  test_adalayernorm.py  test_blocksparseattention.py  test_la.py  test_la_preprocess.py  test_layernorm.py  test_rainfusionattention.py  test_sparseblockestimate.py
tests/quantization/: test_config.py  test_layer.py  test_mode.py  test_quant_utils.py  test_quantize.py
tests/scripts/: check_coverage.py
tests/utils/: test_env.py  test_exception.py
(+19 files in other folders)
